--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -26,17 +26,15 @@
         tools:targetApi="lollipop" />
 
     <EditText
-        android:id="@+id/etName"
+        android:id="@+id/etTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="@string/name_hint"
-        android:inputType="textPersonName"
+        android:hint="@string/title_hint"
+        android:inputType="textAutoComplete|textCapWords"
         android:singleLine="true"
         app:layout_constraintEnd_toStartOf="@+id/btnStarDialog"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,15 +45,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:ems="10"
-        android:maxLines="20"
         android:hint="@string/body_hint"
-        android:inputType="textPersonName"
+        android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
+        android:lines="3"
+        android:maxLines="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etName" />
+        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 </android.support.constraint.ConstraintLayout>
