--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -5,76 +5,40 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clipChildren="false">
+    android:background="@android:drawable/editbox_dropdown_dark_frame"
+    android:clipChildren="false"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".25" />
-
-    <LinearLayout
-        android:id="@+id/llBody"
+    <TextView
+        android:id="@+id/tvBody"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_toStartOf="@id/btnStarRV"
-        android:layout_toLeftOf="@id/btnStarRV"
-        android:gravity="center_horizontal"
-        android:clipChildren="false"
-        app:layout_constraintBottom_toBottomOf="@+id/llName"
-        app:layout_constraintEnd_toStartOf="@+id/btnStarRV"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/llName">
-
-        <TextView
-            android:id="@+id/tvBody"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:ellipsize="none"
-            android:maxLines="20"
-            android:scrollHorizontally="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnStarRV"
-            app:layout_constraintHorizontal_bias="0.313"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:clipChildren="false"
-        android:layout_toStartOf="@id/btnStarRV"
-        android:layout_toLeftOf="@id/btnStarRV"
-        android:gravity="center_vertical|center_horizontal"
-        app:layout_constraintEnd_toStartOf="@+id/llBody"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="none"
+        android:maxLines="20"
+        android:scrollHorizontally="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnStarRV"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        tools:text="This is the body of the title which includes a description about it which will hopefully span several lines in the layout editor" />
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/tvBody"
+        app:layout_constraintStart_toStartOf="@+id/tvBody"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="This is the Item Title" />
 
     <CheckBox
         android:id="@+id/btnStarRV"
@@ -83,12 +47,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginEnd="8dp"
         android:background="@color/color_star_bg"
         android:clickable="true"
         android:focusable="true"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="@+id/llBody"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/llBody" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.494" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnStarRV"
+        app:layout_constraintStart_toEndOf="@+id/tvBody"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
